# prototype_long_polling

./: .gitignore  README.md
backend/: db.sqlite3  pyproject.toml
backend/chat/: admin.py  models.py  tests.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py  wsgi.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: ChatComponent.tsx
frontend/src/hooks/: useChatUpdates.ts
frontend/src/interfaces/: message.interface.ts
